# hexaware-ai-ready-platform

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md  db_init.py  docker-compose.yml  pyproject.toml  render.yaml  run.bat  setup.bat
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: architecture.py  chat.py  datasets.py  embeddings.py  pipeline.py  quality.py
backend/app/core/: exceptions.py  logging.py  middleware.py
backend/app/db/: database.py  models.py
backend/app/models/: schemas.py
backend/app/services/: ai_deduplication.py  rag_service.py
backend/app/services/ingestion/: adls_sink.py  fred_client.py  orchestrator.py  seed_adls.py  worldbank_client.py
backend/scripts/: ingest_world_bank.py
backend/tests/: test_api.py
databricks/notebooks/: 01_bronze_dlt.py  02_silver_dlt.py  03_gold_dlt.py
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: liquid-demo.tsx
frontend/src/hooks/: use-api.ts  use-chat.ts  use-pipeline-ws.ts
frontend/src/lib/: api-client.ts  constants.ts  utils.ts
frontend/src/types/: index.ts
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
migrations/: init.sql
sample-data/: generate_data.py
src/agents/: chatbot.py  crawler.py  llm_client.py  static.py
src/api/: main.py
src/ui/: app.py
src/ui/_pages/: 1_overview.py
(+15 files in other folders)
